2011-04-19  Kinuko Yasuda  <kinuko@chromium.org>

        Reviewed by David Levin.

        [Chromium] Enable QUOTA API at runtime if enable-quota flag is given
        https://bugs.webkit.org/show_bug.cgi?id=58784

        No new tests as this does not change any functionality.

        * bindings/generic/RuntimeEnabledFeatures.cpp:
        * bindings/generic/RuntimeEnabledFeatures.h:
        (WebCore::RuntimeEnabledFeatures::quotaEnabled):
        (WebCore::RuntimeEnabledFeatures::setQuotaEnabled):
        * page/DOMWindow.idl:

2011-04-19  John Gregg  <johnnyg@google.com>

        Reviewed by Darin Fisher.

        Enable folder drag-n-drop when using a "webkitdirectory" file input
        https://bugs.webkit.org/show_bug.cgi?id=58401

        This uses a new ChromeClient API to enumerate the directory and 
        return all the files, as if the user had selected that directory
        by clicking the control in the normal way.

        * loader/EmptyClients.h:
        (WebCore::EmptyChromeClient::enumerateChosenDirectory):
        * page/Chrome.cpp:
        (WebCore::Chrome::enumerateChosenDirectory):
        * page/Chrome.h:
        * page/ChromeClient.h:
        * platform/network/FormData.cpp:
        (WebCore::FormData::appendKeyValuePairItems):
        * rendering/RenderFileUploadControl.cpp:
        (WebCore::RenderFileUploadControl::receiveDropForDirectoryUpload):
        (WebCore::RenderFileUploadControl::receiveDroppedFiles):
        * rendering/RenderFileUploadControl.h:

2011-04-19  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r84150.
        http://trac.webkit.org/changeset/84150
        https://bugs.webkit.org/show_bug.cgi?id=58875

        Broken backspace in Search box of Web Inspector (Requested by
        apavlov on #webkit).

        * inspector/front-end/inspector.js:
        (WebInspector.documentKeyDown):

2011-04-19  Andrey Adaikin  <aandrey@google.com>

        Reviewed by Pavel Feldman.
